Fix services section dark mode text color

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -219,6 +219,10 @@
     body.dark-mode #services-965 {
         background-color: var(--darkBackground);
     }
+    body.dark-mode #services-965 .cs-title,
+    body.dark-mode #services-965 .cs-text {
+        color: var(--bodyTextColorWhite);
+    }
 }
 
 
